# data-universe

./: .gitignore  .pre-commit-config.yaml  Makefile  ecosystem.config.js  milestones.md  vision.md
ops/: .env.example  README.md  alembic.ini  pyproject.toml
ops/account_pool/: __init__.py  crypto.py  import_cli.py  schemas.py  service.py
ops/dashboard/api/: auth.py  dto.py  main.py  metric_poller.py  retention.py  seed_demo.py  ws.py
ops/dashboard/web/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
ops/datastore/: __init__.py  dedup.py  models.py  repositories.py  sqlite_adapter.py  streams.py
ops/datastore/migrations/: env.py  script.py.mako
ops/normalizer/: __init__.py  base.py  reddit.py
ops/pipeline/: __init__.py  orchestrator.py
ops/proxy_pool/: __init__.py  health.py  schemas.py  service.py
ops/scripts/: check_services.py  init_db.py
ops/self_validator/: __init__.py  base.py
ops/shared/: __init__.py  clock.py  config.py  events.py  infra.py  logging.py  metrics.py  pipeline.py  schemas.py
ops/tests/: conftest.py  test_account_crypto.py  test_account_no_log_leak.py  test_account_routes.py  test_account_service.py  test_auth.py  test_bridge.py  test_dedup.py  test_events.py  test_metric_poller.py  test_metrics_contract.py  test_pipeline_e2e.py  test_proxy_backends.py  test_proxy_health.py  test_proxy_routes.py  test_proxy_service.py  test_reddit_json_scraper.py  test_reddit_normalizer.py  test_reddit_normalizer_parity.py  test_reddit_praw_scraper.py  test_reddit_routes.py  test_smoke.py  test_staging_repos.py  test_streams.py  test_worker_browser.py  test_worker_recording.py  test_worker_runtime.py  test_worker_scraper_api.py
ops/worker/: __init__.py  __main__.py  browser.py  heartbeat.py  recording.py  runtime.py  scraper_api.py  seed_task.py
(+74 files in other folders)
