[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "data-universe-ops"
version = "0.0.1"
description = "SN13 miner operational fleet: scrapers, proxy/account pools, dashboard, exporters"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "data-universe-ops" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "redis>=5.0",
    "aiosqlite>=0.20",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13",
    "prometheus-client>=0.20",
    "structlog>=24.4",
    "httpx>=0.27",
    "tenacity>=9.0",
    "orjson>=3.10",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
worker = [
    "playwright>=1.47",
    "playwright-stealth>=1.0.6",
    # asyncpraw pulls asyncprawcore + aiohttp; install on the worker
    # process only (the dashboard / normalizer don't need it).
    "asyncpraw>=7.7.1",
    "aiohttp>=3.9",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-redis",
    "fakeredis>=2.20",
]

[tool.hatch.build.targets.wheel]
packages = [
    "shared",
    "dashboard",
    "datastore",
    "normalizer",
    "pipeline",
    "self_validator",
    "scripts",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
